--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sass": "^1.77.1",
+    "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
